# Bargain

./: .flake8  .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  requirements.txt  verify_features.py  verify_quality.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
configs/: default.yaml  secrets.yaml.example
docs/: lint-analysis.md  naming-conventions.md  project-structure.md
docs/prompts/: backtesting-controller.md  data-controller-prompt.md  data-preparation.md
examples/: candle_pattern_detection.py  event_bus_integration.py  historical_batch_processing.py  historical_candle_fetch.py  live_tick_ingestion.py  multi_symbol_rsi_patterns.py  multi_timeframe_live_pipeline.py  replay_backtest.py  rsi_backtest.py  simple_backtest.py  streaming_indicator_updates.py
src/: __init__.py  config.py  types.py
src/advanced_prep/: __init__.py  indicators.py  multi_symbol.py  pipelines.py  registry.py  resampling.py  rolling.py  state.py  transforms.py  utils.py
src/backtesting/: __init__.py  broker.py  clock.py  controller.py  feed.py  metrics.py  strategy.py
src/data_controller/: __init__.py  controller.py  event_bus.py  normalization.py  reliability.py  replay.py  storage.py
src/data_controller/providers/: __init__.py  binance.py
tests/: test_config.py
tests/advanced_prep/: __init__.py  test_indicators.py  test_multi_symbol.py  test_pipelines.py  test_resampling.py  test_rolling.py  test_rsi_patterns.py  test_transforms.py
tests/backtesting/: test_broker.py  test_controller.py  test_metrics.py
tests/data_controller/: __init__.py  test_binance.py  test_controller.py  test_event_bus.py  test_normalization.py  test_reliability.py  test_replay.py
tests/data_controller/fixtures/: sample_messages.jsonl
